--- a/src/main/webapp/app/leaderboard/leaderboard.component.html
+++ b/src/main/webapp/app/leaderboard/leaderboard.component.html
@@ -1,4 +1,5 @@
 <div class="leaderboard-container">
+    <button (click)="fullscreen()">fullscreen</button>
     <div class="leaderboard">
         <h1>
             <svg class="ico-cup">
