--- a/src/main/webapp/app/entities/score/score-detail.component.html
+++ b/src/main/webapp/app/entities/score/score-detail.component.html
@@ -12,13 +12,13 @@
                 <dt><span jhiTranslate="hackatonLeaderboardApp.score.stage">Stage</span></dt>
                 <dd>
                     <div *ngIf="score.stage">
-                        <a [routerLink]="['/stage', score.stage?.id, 'view']">{{score.stage?.id}}</a>
+                        <a [routerLink]="['/stage', score.stage?.id, 'view']">{{score.stage?.name}}</a>
                     </div>
                 </dd>
                 <dt><span jhiTranslate="hackatonLeaderboardApp.score.team">Team</span></dt>
                 <dd>
                     <div *ngIf="score.team">
-                        <a [routerLink]="['/team', score.team?.id, 'view']">{{score.team?.id}}</a>
+                        <a [routerLink]="['/team', score.team?.id, 'view']">{{score.team?.name}}</a>
                     </div>
                 </dd>
             </dl>
