Por que yo lo valgo

--- a/src/main/webapp/app/leaderboard/leaderboard.component.scss
+++ b/src/main/webapp/app/leaderboard/leaderboard.component.scss
@@ -18,7 +18,7 @@ $default-position-color: #8f3b38;
 .leaderboard {
     margin: 0 auto;
     text-align: center;
-    width: 600px;
+    max-width: 600px;
     background: linear-gradient(to bottom, #3a404d, #181c26);
     border-radius: 10px;
     box-shadow: 0 7px 30px rgba(62, 9, 11, 0.3);
