--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="footer">
-    <p jhiTranslate="footer">This is your footer</p>
+<div class="footer text-center">
+    <p>Powered by Nouss Intelligence</p>
 </div>
