--- a/src/main/webapp/app/leaderboard/leaderboard.component.html
+++ b/src/main/webapp/app/leaderboard/leaderboard.component.html
@@ -1,11 +1,14 @@
 <div class="leaderboard-container">
-    <button (click)="fullscreen()">fullscreen</button>
+    <a class="fullscreen-button" (click)="fullscreen()">
+        <fa-icon icon="expand" fixedWidth="true"></fa-icon>
+        <span>Fullscreen</span>
+    </a>
     <div class="leaderboard">
         <h1>
             <svg class="ico-cup">
                 <use xlink:href="#cup"></use>
             </svg>
-            Teams Leaderboard
+            Ranking
         </h1>
         <ol>
             <li *ngFor="let entry of leaderboard.entries">
