Added nouss logo

--- a/src/main/webapp/app/leaderboard/leaderboard.component.html
+++ b/src/main/webapp/app/leaderboard/leaderboard.component.html
@@ -1,5 +1,10 @@
 <div class="leaderboard-container">
     <button (click)="fullscreen()">fullscreen</button>
+    <section>
+        <div class="leaderboard__logo">
+            <span class="nouss__logo"></span>
+        </div>
+    </section>
     <div class="leaderboard">
         <h1>
             <svg class="ico-cup">
