--- a/src/main/webapp/app/leaderboard/leaderboard.component.scss
+++ b/src/main/webapp/app/leaderboard/leaderboard.component.scss
@@ -15,6 +15,20 @@ $second-position-color: #fa6853;
 $third-position-color: #ba4b46;
 $default-position-color: #8f3b38;
 
+.leaderboard__logo {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.nouss__logo {
+    background: url('../../content/images/nouss.png') no-repeat center top;
+    height: 100px;
+    display: inline-block;
+    vertical-align: middle;
+    background-size: contain;
+    width: 300px;
+}
+
 .leaderboard {
     margin: 0 auto;
     text-align: center;
